--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
         - FrontEnd/JavaScript/ECMAScript/ECMA2019.md
         - FrontEnd/JavaScript/ECMAScript/ECMA2020.md
         - FrontEnd/JavaScript/ECMAScript/ECMA2021.md
+      - FrontEnd/JavaScript/DOM&BOM.md
     - TypeScript:
       - FrontEnd/TypeScript/TypeScript中的函数.md
       - FrontEnd/TypeScript/TypeScript中的类.md
