:bento: 新增`Open Source.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ nav:
     - Dev Tools/MkDocs.md
     - Dev Tools/Nginx.md
     - Dev Tools/Oh My Posh.md
+    - Dev Tools/Open Source.md
     - Dev Tools/zsh.md
   - FrontEnd:
     - HTML:
