:bento: 新增`Redmine.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,7 @@ nav:
     - Dev Tools/Nginx.md
     - Dev Tools/Oh My Posh.md
     - Dev Tools/Open Source.md
+    - Dev Tools/Redmine.md
     - Dev Tools/Slack.md
     - Dev Tools/zsh.md
   - FrontEnd:
