--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
         - Cloud/AWS/Certification/Certified Cloud Practitioner.md
       - Services:
         - CDK: Cloud/AWS/Services/CDK.md
+    - Azure:
+      - Cloud/Azure/AZ-900.md
     - IBM Cloud:
       - Cloud/IBM Cloud/IBM Cloud Essentials.md
     - Cloud/Introduction to Cloud.md
