:bento: 新增`AI-900.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - Azure:
       - Cloud/Azure/AZ-900.md
       - Cloud/Azure/DP-900.md
+      - Cloud/Azure/AI-900.md
     - IBM Cloud:
       - Cloud/IBM Cloud/IBM Cloud Essentials.md
     - Cloud/Introduction to Cloud.md
