:bento: 新增`SC-900.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
       - Cloud/Azure/AZ-900.md
       - Cloud/Azure/DP-900.md
       - Cloud/Azure/AI-900.md
+      - Cloud/Azure/SC-900.md
     - IBM Cloud:
       - Cloud/IBM Cloud/IBM Cloud Essentials.md
     - Cloud/Introduction to Cloud.md
