:bento: 新增`AZ-104.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
       - Cloud/Azure/DP-900.md
       - Cloud/Azure/AI-900.md
       - Cloud/Azure/MS-900.md
+      - Cloud/Azure/AZ-104.md
       - Cloud/Azure/AZ-204.md
     - GCP:
       - Cloud/GCP/Professional Cloud Developer.md
