:bento: 新增`Associate Level.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
   - Cloud:
     - AWS:
       - Cloud/AWS/Certified Cloud Practitioner.md
+      - Cloud/AWS/Associate Level.md
     - Azure:
       - Cloud/Azure/DP-900.md
       - Cloud/Azure/AI-900.md
