✨ feat: 新增`ChatGPT.md`(内容基于DeepLearning.ai的课程)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,8 @@ nav:
       - DataScience/Jupyter/MagicCommands.md
     - Fundamental:
       - DataScience/Fundamental/Data Science Tools.md
+    - AI:
+      - DataScience/AI/ChatGPT.md
   - Dev Tools:
     - Git:
       - Dev Tools/Git/参考资料.md
