--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -185,10 +185,12 @@ theme:
       icon: material/lightbulb-outline
       name: Switch to dark mode
   features:
-  - search.suggest
-  - search.highlight
+  - content.code.annotate
+  - content.code.copy
   - navigation.indexes
   - navigation.top
+  - search.highlight
+  - search.suggest
 plugins:
   - mermaid2
   - search:
@@ -207,6 +209,8 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.highlight:
       anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.mark
   - pymdownx.snippets
@@ -214,7 +218,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:mermaid2.fence_mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true 
   - pymdownx.tasklist:
